put #site-navigation fix on top of the Page on MobileView

--- a/sass/mobile/_mobile.scss
+++ b/sass/mobile/_mobile.scss
@@ -21,4 +21,9 @@ $mq_small_and_medium: "(max-width: 1024px)";
     width: 100%;
     margin-right: 0;
   }
+  #site-navigation {
+    position: fixed;
+    top: 0;
+    z-index: 100;
+  }
 }
