--- a/style.css
+++ b/style.css
@@ -859,6 +859,12 @@ object {
         width: 100%;
         margin-right: 0;
     }
+
+    #site-navigation {
+        position: fixed;
+        top: 0;
+        z-index: 100;
+    }
 }
 
 /*# sourceMappingURL=style.css.map */
